# oifs

./: Cargo.toml  README.md
.agent/rules/: cargo_test_verification.md
src/: allocator.rs  bitmap.rs  directory.rs  disk.rs  encryption.rs  ffi.rs  inode.rs  lib.rs  superblock.rs
tests/: cli_extended_test.rs  cli_mkdir_test.rs  cli_nested_test.rs  cli_recursive_test.rs  cli_test.rs  concurrency_test.rs  crash_safety_test.rs  encryption_test.rs  ffi_delete_test.rs  ffi_test.rs  integration_test.rs
