[package]
name = "oifs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bincode = "1.3"
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive"] }
ctrlc = "3.5.1"
libc = "0.2.180"
memmap2 = "0.9.9"
nix = { version = "0.31.1", features = ["fs"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
zstd = "0.13"
