[package]
name = "oifs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bincode = "1.3"
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive"] }
ctrlc = "3.5.1"
libc = "0.2.180"
memmap2 = "0.9.9"
nix = { version = "0.31.1", features = ["fs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
zstd = "0.13"

# Encryption dependencies
chacha20poly1305 = "0.10"  # XChaCha20-Poly1305 AEAD cipher
argon2 = "0.5"             # Key derivation function
rand = "0.8"               # CSPRNG for nonce generation
zeroize = { version = "1.7", features = ["derive"] }  # Secure memory wiping

# Optional: MCP server stack. Only pulled in when the `mcp` feature is on,
# which keeps the CLI binary buildable on older rustc toolchains.
rmcp = { version = "0.16", features = ["server", "macros", "transport-async-rw", "transport-io"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
anyhow = { version = "1", optional = true }
schemars = { version = "1", optional = true }

[features]
default = []
mcp = ["dep:rmcp", "dep:tokio", "dep:anyhow", "dep:schemars"]

[[bin]]
name = "oifs"
path = "src/bin/oifs.rs"

[[bin]]
name = "oifs_mcp"
path = "src/bin/oifs_mcp.rs"
required-features = ["mcp"]

[dev-dependencies]
tempfile = "3.8"
